# template-satellite-cpp-meson

./: .clang-format  .clang-tidy  .codespellrc  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  README.md  TemplateSatellite.cpp  TemplateSatellite.hpp  generator.cpp  main.cpp  meson.build  rename-template.py
.github/workflows/: ci.yml
subprojects/: .gitignore  constellation.wrap
